# MKIDGen3

./: .gitignore  .gitmodules  .pdm-python  .readthedocs.yaml  README.md  design.md  enviornment.yml  gitprocedures.md  pyproject.toml  requirements.txt  setup.py
.run/: FRSRFSoCa.run.xml  FRSRFSoCb.run.xml  feedline_client.run.xml  feedline_server.run.xml  feedline_server_remote.run.xml  mkidtesting.run.xml  sweep_GoL.run.xml
arraysetup/: functional_script.py  loop_script.py  mkidtesting.py  power_sweep_client.py  sweep_test.py  theoretical_script.py  validation.py
cruft/: hlsinputgen_dds.py
docs/: Makefile  design_description.md  frs.md  mts_4x2.md  pynq_deviations.md  requirements.txt
hls_scripts/: resonator_ddc_check.py
mkidgen3/: FCCM22_Demo.ipynb  LMK04828_256.0_MTS.txt  __init__.py  api.py  clocking.py  configuration_objects.py  crossbar.py  daccomb.py  daclutgen2gen3.py  dsp.py  fccm22_demo.py  feedline_client.py  feedline_client_objects.py  feedline_objects.py  feedline_server.py  fixedpoint.py  funcs.py  g3_paper.py  gen2.py  hlsinputgen_dds.py  ifboard.py  interrupts.py  mkidpynq.py  objects.py  opfb.py  overlay_helpers.py  plotting.py  power_sweep_helpers.py  pynq.py  quirks.py  registers.py  replicon.py  rfsocmemory.py  server.py  status_keeper.py  system_parameters.py  testutils.py  util.py  zmq_client.py  zmq_server.py
notebooks/: ADC_Capture_Anritsu_Test.ipynb  Deli_CleanTest.ipynb  G3_Paper_Data_Figures.ipynb  G3_Paper_Data_Figures_FRSObjects.ipynb  G3_Paper_Data_Figures_RFDC_Loopback.ipynb  GoogleSeminar.ipynb  IQ_Capture_Loopback.ipynb  MKID_Loop_Sim.ipynb  MTSVerification.ipynb  OPFB_Test.ipynb  OPFB_Test_Capture_Roll_Test.ipynb  PL_DDS_Test_ADC_Downconversion.ipynb  PL_DDS_Test_DAC_Upconversion.ipynb  iqtest.ipynb  (+8 more)
(+106 files in other folders)
